# Shadowfax

./: CMakeLists.txt  main.cpp
Bot/: bot.cpp  bot.h  config.cpp  config.h
